    - Added compatible equipment and equipment categories to the item page
    - Added fuel categories to burner machine page
    - Shift + click on a recipe with one product to view the product's page
    - Using the inspect hotkey will attempt to open the info page relative to the currently open GUI
      - Only works on vanilla GUIs (custom mod GUIs do not support relative anchoring)
  Changes:
    - Changed default inspect hotkey to alt+click
    - Changed default search hotkey to Control + B
    - Renamed 'burner machine' to 'machine'
  Bugfixes:
    - Fixed a crash if a prototype (somehow) doesn't have a stored translation (#80)
    - Fixed a crash when another mod adds a force before RB has a chance to load
    - Fixed a crash when using the search hotkey in the equipment grid GUI (#82)
    - Fixed that mining drills were not being processed for technology unlocks
---------------------------------------------------------------------------------------------------
Version: 3.1.5
Date: 2021-09-19
  Changes:
    - Added Brazillian Portuguese translation (by BM123499)
    - Quick reference windows now open next to their parent window
  Bugfixes:
    - Fixed that dragging a quick reference window would reset its position for a frame
    - Fixed that settings wouldn't be preserved if they were falsey
---------------------------------------------------------------------------------------------------
Version: 3.1.4
Date: 2021-09-02
  Bugfixes:
    - Fixed a crash when using the navigation hotkeys with a non-custom GUI open
    - Fixed a crash when using the search hotkey in some windows
---------------------------------------------------------------------------------------------------
Version: 3.1.3
Date: 2021-08-18
  Bugfixes:
    - Fixed a crash when an item has a place result that isn't in the Recipe Book
    - Fixed navigation hotkeys not working if search was open
    - Fixed the toggle quick ref button wouldn't be updated if it was in the stickied info GUI